--- a/app/src/main/res/layout/fragment_historial_sincroniza.xml
+++ b/app/src/main/res/layout/fragment_historial_sincroniza.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/titulo_historial"
-        android:textSize="16" />
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/btnSincronizar"
