--- a/app/src/main/res/layout/fragment_historial_sincroniza.xml
+++ b/app/src/main/res/layout/fragment_historial_sincroniza.xml
@@ -68,9 +68,9 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="429dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="10dp">
 
         <Button
             android:id="@+id/btnSincronizar"
@@ -80,7 +80,7 @@
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="384dp"
+            android:layout_height="527dp"
             android:scrollbars="horizontal">
 
             <LinearLayout
@@ -91,7 +91,7 @@
                 <ListView
                     android:id="@+id/lvCupoHogar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"></ListView>
+                    android:layout_height="418dp"></ListView>
             </LinearLayout>
         </HorizontalScrollView>
     </LinearLayout>
